# kurvan

./: .gitignore  Cargo.toml  README.md  clippy.toml
.github/workflows/: ci.yaml  release.yaml
src/: asset_tracking.rs  dev_tools.rs  lib.rs  main.rs  schedule.rs  states.rs  widgets.rs
src/components/: interaction_palette.rs  mod.rs  player.rs  position.rs  steering.rs
src/demo/: animation.rs  level.rs  mod.rs  movement.rs  player.rs
src/game/: level.rs  mod.rs  movement.rs  player.rs
src/menus/: credits.rs  main.rs  mod.rs  pause.rs  settings.rs
src/plugins/: dev_tools.rs  input.rs  interaction.rs  level.rs  main_menu.rs  mod.rs  movement.rs  settings_menu.rs  splash.rs  title.rs
src/resources/: arena.rs  mod.rs  player_mesh.rs
src/screens/: gameplay.rs  loading.rs  mod.rs  splash.rs
src/theme/: interaction.rs  mod.rs  widget.rs
